# routes/todo.route.js
@@ -7,7 +7,9 @@ const {
   updateData,
   binData,
   createData,
+  getAllDatas,
 } = require("../controllers/todo.controller");
+route.get("/admin/todolists", getAllDatas);
 route.get("/", getAllData);
 route.get("/:id", getDataByID);
 route.put("/:id", updateData);
